--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@vitejs/plugin-react": "^4.0.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.1",
@@ -23,35 +23,34 @@
     "react-identicons": "^1.2.5",
     "react-moment": "^1.1.2",
     "react-router-dom": "6",
-    "react-scripts": "5.0.0",
+    "vite": "^4.3.7",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/types": "^7.21.5",
     "@openzeppelin/contracts": "^4.5.0",
     "@tailwindcss/forms": "0.4.0",
+    "@types/node": "^20.1.6",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "assert": "^2.0.0",
-    "autoprefixer": "10.4.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "autoprefixer": "10.4.5",
     "buffer": "^6.0.3",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.0",
+    "esbuild": "^0.17.19",
     "https-browserify": "^1.0.0",
     "mnemonics": "^1.1.3",
     "os-browserify": "^0.3.0",
-    "postcss": "8.4.5",
+    "postcss": "^8.4.23",
     "process": "^0.11.10",
-    "react-app-rewired": "^2.1.11",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "tailwindcss": "3.0.18",
-    "url": "^0.11.0"
+    "tailwindcss": "^3.3.2",
+    "url": "^0.11.0",
+    "vite-plugin-env-compatible": "^1.1.1",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "browserslist": {
     "production": [
