--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@1001-digital/erc721-extensions": "^0.0.19",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@vitejs/plugin-react": "^4.0.0",
@@ -21,24 +22,24 @@
     "react-hooks-global-state": "^1.0.2",
     "react-icons": "^4.3.1",
     "react-identicons": "^1.2.5",
-    "react-moment": "^1.1.2",
+    "react-moment": "^1.1.3",
     "react-router-dom": "6",
-    "vite": "^4.3.7",
-    "web-vitals": "^2.1.4"
+    "vite": "^4.3.8",
+    "web-vitals": "^3.3.1"
   },
   "devDependencies": {
     "@babel/types": "^7.21.5",
     "@openzeppelin/contracts": "^4.5.0",
-    "@tailwindcss/forms": "0.4.0",
-    "@types/node": "^20.1.6",
+    "@tailwindcss/forms": "0.5.3",
+    "@types/node": "^20.2.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "assert": "^2.0.0",
-    "autoprefixer": "10.4.5",
+    "autoprefixer": "10.4.14",
     "buffer": "^6.0.3",
-    "chai": "^4.3.6",
+    "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "crypto-browserify": "^3.12.0",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.3",
     "esbuild": "^0.17.19",
     "https-browserify": "^1.0.0",
     "mnemonics": "^1.1.3",
