--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hardhat": "^2.10.1",
     "ipfs-http-client": "^53.0.1",
     "moment": "^2.29.4",
+    "primereact": "^9.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hooks-global-state": "^1.0.2",
