--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-identicons": "^1.2.5",
     "react-moment": "^1.1.3",
     "react-router-dom": "6",
+    "uuid": "^9.0.0",
     "vite": "^4.3.8",
     "web-vitals": "^3.3.1"
   },
